--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "Support tickets app",
 	"main": "server.js",
 	"engines": {
-		"node": "15x",
+		"node": "15.12.0",
 		"npm": "7.7.5"
 	},
 	"scripts": {
